@@ -50,6 +50,7 @@ Charles Hudak
 Charlie Hubbard
 Chris Povirk
 Christian Knorr
+Christoph Gysin
 Christoph Wilhelms
 Christophe Labouisse
 Christopher A. Longo
